--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,8 @@ jobs:
           name: Run Detekt
           command: ./gradlew detekt
       - run:
+	  name: AcceptLicenses
+	  command: yes | sdkmanager --licenses
+      - run:
           name: Run Unit tests
           command: ./gradlew test
