--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,9 @@ jobs:
       - run:
           name: Run Detekt
           command: ./gradlew detekt
-      - run:
-         name: AcceptLicenses
-         command: yes | sdkmanager --licenses
+#      - run:
+#         name: AcceptLicenses
+#         command: yes | sdkmanager --licenses
       - run:
           name: Run Unit tests
           command: ./gradlew test
